<resources>
    <string name="app_name">DVR</string>
    <string name="camera_name">Driving Video</string>
    <string name="catalog_hot">Hot</string>
    <string name="no_content_text">No Content</string>
    <string name="out_of_space">No proper room on this Home screen.</string>
    <string name="camera_double">All Cam</string>
    <string name="camera_front">Front Cam</string>
    <string name="camera_back">Back Cam</string>
    <string name="camera_left">Left Cam</string>
    <string name="camera_right">Right Cam</string>
    <string name="camera_night">Night Cam</string>
    <string name="camera_triple">Triple</string>
    <string name="camera_switching">Camera Switching</string>
    <string name="open_front_camera_failed">Open Front-Camera failed!</string>
    <string name="open_back_camera_failed">Open Back-Camera failed!</string>
    <string name="no_camera_exist">No Camera existes!</string>
    <string name="erro_camera_mode">Error camera mode!</string>
    <string name="camera_service_error">CameraService connection error!</string>
    <string name="front_camera_plug_in">Front-Camera in!</string>
    <string name="front_camera_plug_out">Front-Camera out!</string>
    <string name="back_camera_plug_in">Back-Camera in!</string>
    <string name="back_camera_plug_out">Back-Camera out!</string>
    <string name="back_camera_not_exist">Back-Camera not existes!</string>
    <string name="front_camera_remove">Front-Camera is plugged out un-expected!</string>
    <string name="back_camera_remove">Back-Camera is plugged out un-expected!</string>
    <string name="recoding_stop_by_storage_umount">Recording stopped because \"<g id="part1">%1$s</g>\" is plugged out!</string>
    <string name="storage_mounted">\"<g id="part1">%1$s</g>\" in!</string>
    <string name="storage_umounted">\"<g id="part1">%1$s</g>\" out!</string>
    <string name="photo_module">Photo Mode</string>
    <string name="video_module">Video Mode</string>
    <string name="calendar_day" />
    <string name="catalog_apps">Application</string>
    <string name="photo">Photo</string>
    <string name="video">Video</string>
    <string name="music">Music</string>
    <string name="folder_name">folder_name</string>
    <string name="camera_tip_open_mic">Mic open</string>
    <string name="camera_tip_close_mic">Mic close</string>
    <string name="camera_tip_open_gsensor">Collision capture open</string>
    <string name="camera_tip_close_gsensor">Collision capture close</string>
    <string name="camera_setting">Camera Settings</string>
    <string name="version_title">Current Version</string>
    <string name="close">Close</string>
    <string name="error">Error</string>
    <string name="warning">Warning</string>
    <string name="front_quality_title">Front Camera Quality(Take effect after restarting video)</string>
    <string name="back_quality_title">Back Camera Quality(Take effect after restarting video)</string>
    <string name="quality_dialog_title">"Video's Quality"</string>
    <string name="quality_high">High(1080P)</string>
    <string name="quality_high_value">high</string>
    <string name="quality_normal">Normal(720P)</string>
    <string name="quality_low">Low(480P)</string>
    <string name="sensitive_title">Collision Detection Sensitivity</string>
    <string name="sensitive_dialog_title">Gsensor Sensitive Setting</string>
    <string name="sensitive_high">Most Sensitive</string>
    <string name="sensitive_normal">Very Sensitive</string>
    <string name="sensitive_low">Normal</string>
    <string name="tip_front_msg">"Front-Camera's video quality is \""<g id="part1">%1$s</g>\"!</string>
    <string name="tip_back_msg">"Back-Camera's video quality is \""<g id="part1">%1$s</g>\"!</string>
    <string name="storage_title">Video Storage Path</string>
    <string name="storage_dialog_title">Video Storage Path</string>
    <string name="storage_local">Local</string>
    <string name="storage_sdcard">SD-card</string>
    <string name="tip_storage_path_msg">"Camera's recording video will be stored in \""<g id="part1">%1$s</g>\" storage!</string>
    <string name="storage_not_exist_msg">The Storage \"<g id="part1">%1$s</g>\" is not mounted!</string>
    <string name="default_storage_path">/storage/sdcard1</string>
    <string name="autosave_time_title">Loop Record Interval(Take effect after restarting video)</string>
    <string name="autosave_time_dialog_title">Loop Record Interval</string>
    <string name="seconds_30">30 seconds</string>
    <string name="minute_01">1 minutes</string>
    <string name="minute_02">2 minutes</string>
    <string name="minute_03">3 minutes</string>
    <string name="minute_05">5 minutes</string>
    <string name="tip_recording_time_msg">"When camera's recording, it will be auto-saved for every \""<g id="part1">%1$s</g>\"!</string>
    <string name="autosleep_time_title">Auto Sleep</string>
    <string name="autosleep_time_dialog_title">Auto Sleep</string>
    <string name="autosleep_10">10 minutes after car is stopped</string>
    <string name="autosleep_15">15 minutes after car is stopped</string>
    <string name="autosleep_20">20 minutes after car is stopped</string>
    <string name="autosleep_30">30 minutes after car is stopped</string>
    <string name="autosleep_60">60 minutes after car is stopped</string>
    <string name="autosleep_never">Never auto sleep</string>
    <string name="stoppreview_time_title">Auto Exit Preview</string>
    <string name="stoppreview_time_dialog_title">Auto Exit Preview</string>
    <string name="stoppreview_30">After 30 seconds of inactivity</string>
    <string name="stoppreview_60">After 60 seconds of inactivity</string>
    <string name="stoppreview_120">After 120 seconds of inactivity</string>
    <string name="stoppreview_300">After 300 seconds of inactivity</string>
    <string name="stoppreview_never">Never auto exit preview</string>
    <string name="mute_record">Mute Record(Take effect after restarting video)</string>
    <string name="auto_start_record">Auto Record On Bootup</string>
    <string name="show_float_button">Show Float Button</string>
    <string name="flash_light">Disable Flash Light</string>
    <string name="gsensor">Enbale Wake Up by Collision</string>
    <string name="summary_restart_recording">Take effect after restarting video</string>
    <string name="front_cam_ver_mir">Front Camera Mirror Display(Take effect after system restart)</string>
    <string name="bak_cam_ver_mir">Rear Camera Mirror Display(Take effect after system restart)</string>
    <string name="left_cam_ver_mir">Left Camera Mirror Display(Take effect after system restart)</string>
    <string name="right_cam_ver_mir">Right Camera Mirror Display(Take effect after system restart)</string>
    <string name="front_preview_scale_type_title">Front Camere Preview Scale Type</string>
    <string name="back_preview_scale_type_title">Rear Camere Preview Scale Type</string>
    <string name="scale_type_best_fit">Best fit</string>
    <string name="scale_type_center">Center</string>
    <string name="front_scale_type_dialog_title">Front Camere Preview Scale Type</string>
    <string name="back_scale_type_dialog_title">Rear Camere Preview Scale Type</string>
    <string name="recording_time"><g id="part1">%1$s</g> <g id="part2">%2$s</g></string>
    <string name="dual_recording">Dual</string>
    <string name="front_recording">Front</string>
    <string name="back_recording">Back</string>
    <string name="recording3">Three</string>
    <string name="recording4">Four</string>
    <string name="dual_recording_night">Night</string>
    <string name="history_record">History Record</string>
    <string name="upfolder">Up</string>
    <string name="display_mode_grid">Grid</string>
    <string name="display_mode_list">List</string>
    <string name="empty_folder">Empty Folder</string>
    <string name="date_title">Date: <g id="part1">%1$s</g></string>
    <string name="size_title">Size: <g id="part1">%1$s</g></string>
    <string name="duration_title">Duration: <g id="part1">%1$s</g></string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="select_all">Select All</string>
    <string name="multiselected_num">Selected(<g id="percent">%1$s</g>)</string>
    <string name="open_fail">Open file failed!</string>
    <string name="confirm">Confirm</string>
    <string name="delete_dialog_msg">Deleting...</string>
    <string name="delete_confirm">Are you sure to delete \"%s\"?</string>
    <string name="delete_failed">Delete failed!</string>
    <string name="delete_success">Delete success!</string>
    <string name="delete_all_confirm">Are you sure to delete all of the selected items?</string>
    <string name="select_none_file">No file is selected!</string>
    <string name="fail_to_delete_protected_file">Delete Failed! The file is protected!</string>
    <string name="adapter_off">Adapter is removed and will be suspended after %1$d seconds</string>
    <string name="car_stopped_off">Car moving is not detected in past %1$d minutes and would be suspended after %2$d seconds for power saving</string>
    <string name="tip_time_h">" "</string>
    <string name="tip_time_m">" "</string>
    <string name="tip_float_button">Click float button to watch the preview of camera from float window</string>
    <string name="tip_float_view">Single click to switch camear and double click to enter DVR</string>
    <string name="tip_start_record">Video Recording Start</string>
    <string name="tip_stop_record">Video Recroding Stop</string>
    <string name="tip_camera_front">Swtiching to front camera</string>
    <string name="tip_camera_night">Swtiching to night vision</string>
    <string name="tip_camera_double">Swtiching Dual Camera</string>
    <string name="tip_camera_switch">Camera Switching</string>
    <string name="tip_camera_back">Swtiching to rear camera</string>
    <string name="tip_defult_map">%s is set to default for navigation, long pressing at GPS can reset it</string>
    <string name="tip_video_record">Driving Video Recording</string>
    <string name="tip_insert_sdcard">Please insert SD Card</string>
    <string name="tip_collision">Crashed Video Locked</string>
    <string name="tip_lock">Lock Video</string>
    <string name="tip_sdcard_full">SD card space is not enough and please manage it</string>
    <string name="tip_sdcard_format">SD card space is not enough and please format it</string>
    <string name="tip_sdcard_slow">SD card is slow for reading and writing, please format it immediately or change it</string>
    <string name="tip_sdcard_read_only">SD card can not writing, please format it immediately or change it</string>
    <string name="tip_record_stopped">SD card is slow for reading and writing, please change it, Recording Stopped</string>
    <string name="tip_stop_preview">Preivew quit for power saving</string>
    <string name="tip_background_recording">Background recording</string>
    <string name="tip_car_backing">In reverse gear</string>
    <string name="tip_turn_left">Turn Left</string>
    <string name="tip_turn_right">Turn Right</string>
    <string name="vr_back">VR Reverse Gear UI</string>
    <string name="gps_watermark">Display GPS WaterMark</string>
    <string name="adas">ADAS</string>
    <string name="biaoding">Calibration for 360 car backing(Keep previewing with back camera)</string>
    <string name="biaoding_data">Carlibration Data(Unit: mm)</string>
    <string name="cw">车宽(CW)：</string>
    <string name="ch">车长(CH)：</string>
    <string name="c2cw">摄像头到车边缘距离(C2CW)：</string>
    <string name="c2gh">摄像头到地面高度(C2GH)：</string>
    <string name="c2bh">车尾到标定板的距离(C2BH)：</string>
    <string name="c2bw">车边缘到标定板边缘的距离(C2BW)：</string>
    <string name="acc_on_cam_title">Show cam ACC on</string>
    <string name="acc_on_cam_dialog_title">Select cam ACC on</string>
</resources>