<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:gravity="center" android:layout_gravity="center" android:id="@id/root_container" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:iconTextView="http://schemas.android.com/apk/res/com.car.dvr">
    <LinearLayout android:orientation="horizontal" android:id="@id/largeSurfaceContainer" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_alignParentTop="true" android:layout_alignParentEnd="true">
        <com.car.dvr.MyHorizontalScrollView android:id="@id/surfaceLeftContainer" android:background="@color/black" android:visibility="gone" android:layout_width="250.0dip" android:layout_height="fill_parent">
            <LinearLayout android:orientation="horizontal" android:background="#00ffffff" android:layout_width="fill_parent" android:layout_height="fill_parent">
                <TextureView android:id="@id/surfaceLeft" android:layout_width="@dimen/side_camera_preview_max_width" android:layout_height="fill_parent" />
            </LinearLayout>
        </com.car.dvr.MyHorizontalScrollView>
        <View android:id="@id/surfaceLeftContainerSide" android:background="@color/green" android:visibility="gone" android:layout_width="3.0dip" android:layout_height="fill_parent" />
        <LinearLayout android:orientation="horizontal" android:id="@id/surfacePanoContainer" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="fill_parent">
            <View android:id="@id/surfacePanoSide" android:visibility="gone" android:layout_width="120.0dip" android:layout_height="fill_parent" />
            <View android:layout_width="0.0dip" android:layout_height="fill_parent" />
            <com.car.dvr.PanoView android:id="@id/surfacePano" android:layout_width="240.0dip" android:layout_height="fill_parent" />
            <View android:layout_width="0.0dip" android:layout_height="fill_parent" />
        </LinearLayout>
        <FrameLayout android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0">
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="fill_parent">
                <ScrollView android:id="@id/largeSurface1Container" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0">
                    <LinearLayout android:orientation="vertical" android:background="#00ffffff" android:layout_width="fill_parent" android:layout_height="fill_parent">
                        <FrameLayout android:background="#00ffffff" android:layout_width="fill_parent" android:layout_height="fill_parent">
                            <TextureView android:id="@id/largeSurface1" android:layout_width="fill_parent" android:layout_height="400.0dip" />
                            <com.car.dvr.ADAS.SVDraw android:id="@id/ADAS_SVDraw" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="fill_parent" />
                        </FrameLayout>
                    </LinearLayout>
                </ScrollView>
                <LinearLayout android:orientation="vertical" android:id="@id/largeSurface23Container" android:background="#00ffffff" android:visibility="gone" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0">
                    <ScrollView android:id="@id/largeSurface2Container" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
                        <LinearLayout android:orientation="vertical" android:background="#00ffffff" android:layout_width="fill_parent" android:layout_height="fill_parent">
                            <com.car.dvr.MySurfaceView android:id="@id/largeSurface2" android:layout_width="fill_parent" android:layout_height="400.0dip" />
                        </LinearLayout>
                    </ScrollView>
                    <ScrollView android:id="@id/largeSurface3Container" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
                        <LinearLayout android:orientation="vertical" android:background="#00ffffff" android:layout_width="fill_parent" android:layout_height="fill_parent">
                            <com.car.dvr.MySurfaceView android:id="@id/largeSurface3" android:layout_width="fill_parent" android:layout_height="400.0dip" />
                        </LinearLayout>
                    </ScrollView>
                </LinearLayout>
            </LinearLayout>
            <include android:layout_width="fill_parent" android:layout_height="fill_parent" layout="@layout/reverse_gear" />
        </FrameLayout>
        <View android:id="@id/surfaceRightContainerSide" android:background="@color/green" android:visibility="gone" android:layout_width="3.0dip" android:layout_height="fill_parent" />
        <com.car.dvr.MyHorizontalScrollView android:id="@id/surfaceRightContainer" android:background="@color/black" android:visibility="gone" android:layout_width="250.0dip" android:layout_height="fill_parent">
            <LinearLayout android:orientation="horizontal" android:background="#00ffffff" android:layout_width="fill_parent" android:layout_height="fill_parent">
                <TextureView android:id="@id/surfaceRight" android:layout_width="@dimen/side_camera_preview_max_width" android:layout_height="fill_parent" />
            </LinearLayout>
        </com.car.dvr.MyHorizontalScrollView>
    </LinearLayout>
    <com.car.dvr.MySurfaceView android:id="@id/smallSurface" android:layout_width="@dimen/small_preview_view_width" android:layout_height="@dimen/small_preview_view_height" android:layout_alignParentTop="true" android:layout_alignParentRight="true" />
    <com.car.dvr.RecordTimeView android:gravity="left" android:id="@id/largeTime" android:layout_alignLeft="@id/largeSurfaceContainer" android:layout_alignTop="@id/largeSurfaceContainer" style="@style/RecordingTimeStyle" />
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/lower_left_btns" android:background="@drawable/bg_rect_grey_cr2dp" android:paddingTop="2.0dip" android:paddingBottom="2.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentBottom="true" android:layout_centerInParent="true">
        <ImageButton android:id="@id/cam_switch" android:background="@null" android:visibility="gone" android:src="@drawable/btn_cam_switch" android:layout_marginEnd="@dimen/marginBase" style="@style/iconBase" />
        <ImageView android:id="@id/ivMic" android:src="@drawable/ic_vector_mic_black_24dp" android:layout_marginEnd="@dimen/marginBase" style="@style/iconBase" />
        <ImageView android:id="@id/ivGsensor" android:src="@drawable/ic_vector_vibration_black_24dp" android:layout_marginEnd="@dimen/marginBase" style="@style/iconBase" />
        <ImageButton android:id="@id/lock" android:background="@null" android:visibility="gone" android:src="@drawable/lock" android:layout_marginEnd="@dimen/marginBase" style="@style/iconBase" />
        <ImageButton android:id="@id/bido" android:background="@null" android:visibility="gone" android:src="@drawable/bido_btn" android:layout_marginEnd="@dimen/marginBase" style="@style/iconBase" />
        <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/controlContainer" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <LinearLayout android:orientation="horizontal" android:id="@id/cam_selector" android:layout_width="wrap_content" android:layout_height="wrap_content">
                <com.car.dvr.IconTextView android:gravity="center" android:layout_gravity="center" android:id="@id/tab_front" android:background="@drawable/focus_rectangle" android:paddingRight="5.0dip" android:layout_width="80.0dip" android:layout_height="wrap_content" android:text="@string/camera_front" iconTextView:icon="@drawable/ic_vector_arrow_drop_down_yellow_24dp" />
                <com.car.dvr.IconTextView android:gravity="center" android:layout_gravity="center" android:id="@id/tab_double" android:background="@drawable/focus_rectangle" android:paddingRight="5.0dip" android:layout_width="80.0dip" android:layout_height="wrap_content" android:text="@string/camera_double" iconTextView:icon="@drawable/ic_vector_arrow_drop_down_yellow_24dp" />
                <com.car.dvr.IconTextView android:gravity="center" android:layout_gravity="center" android:id="@id/tab_back" android:background="@drawable/focus_rectangle" android:paddingRight="5.0dip" android:layout_width="80.0dip" android:layout_height="wrap_content" android:text="@string/camera_back" iconTextView:icon="@drawable/ic_vector_arrow_drop_down_yellow_24dp" />
            </LinearLayout>
            <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content">
                <LinearLayout android:layout_width="60.0dip" android:layout_height="60.0dip" android:layout_marginEnd="@dimen/marginBase">
                    <ImageButton android:id="@id/history" android:background="@null" android:src="@drawable/history_img" style="@style/iconBase" />
                </LinearLayout>
                <ImageButton android:id="@id/recording" android:background="@null" android:src="@drawable/btn_recording_off" android:layout_marginEnd="@dimen/marginBase" style="@style/iconBase" />
                <ImageButton android:id="@id/photo" android:background="@null" android:src="@drawable/btn_shutter_photo" android:layout_marginEnd="@dimen/marginBase" style="@style/iconBase" />
                <ImageButton android:id="@id/menu" android:background="@null" android:src="@drawable/ic_vector_settings_black_24dp" android:tint="@color/white" android:layout_marginEnd="@dimen/marginBase" style="@style/iconBase" />
                <TextView android:textSize="22.0sp" android:textColor="@drawable/color_selector" android:id="@id/adas_set" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/adas" android:layout_marginEnd="@dimen/marginBase" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>